--- a/docs/en/rest-api/ml/close-job.asciidoc
+++ b/docs/en/rest-api/ml/close-job.asciidoc
@@ -1,8 +1,9 @@
+//lcawley Verified example output 2017-04-11
 [[ml-close-job]]
 ==== Close Jobs
 
-An anomaly detection job must be opened in order for it to be ready to receive and analyze data.
-A job may be opened and closed multiple times throughout its lifecycle.
+The close job API enables you to close a job.
+A job can be opened and closed multiple times throughout its lifecycle.
 
 ===== Request
 
@@ -10,24 +11,24 @@ A job may be opened and closed multiple times throughout its lifecycle.
 
 ===== Description
 
-A job can be closed once all data has been analyzed.
+//A job can be closed once all data has been analyzed.
 
 When you close a job, it runs housekeeping tasks such as pruning the model history,
-flushing buffers, calculating final results and persisting the internal models.
+flushing buffers, calculating final results and persisting the model snapshots.
 Depending upon the size of the job, it could take several minutes to close and
 the equivalent time to re-open.
 
-Once closed, the anomaly detection job has almost no overhead on the cluster
-(except for maintaining its meta data). A closed job is blocked for receiving
-data and analysis operations, however you can still explore and navigate results.
+After it is closed, the job has almost no overhead on the cluster except for
+maintaining its meta data. A closed job cannot receive data or perform analysis
+operations, but you can still explore and navigate results.
 
-//NOTE:
+//NOTE: TBD
 //OUTDATED?: If using the {prelert} UI, the job will be automatically closed when stopping a datafeed job.
 
 ===== Path Parameters
 
 `job_id` (required)::
-  (+string+)    Identifier for the job
+  (+string+) Identifier for the job
 
 ===== Query Parameters
 
