--- a/docs/en/rest-api/ml/open-job.asciidoc
+++ b/docs/en/rest-api/ml/open-job.asciidoc
@@ -1,8 +1,9 @@
+//lcawley Verified example output 2017-04-11
 [[ml-open-job]]
 ==== Open Jobs
 
-An anomaly detection job must be opened in order for it to be ready to receive and analyze data.
-A job may be opened and closed multiple times throughout its lifecycle.
+A job must be opened in order for it to be ready to receive and analyze data.
+A job can be opened and closed multiple times throughout its lifecycle.
 
 ===== Request
 
